--- a/src/UI of Dr-Drill/style.css
+++ b/src/UI of Dr-Drill/style.css
@@ -51,7 +51,11 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    background-color: #ff6f00;
+    background-color: #a20a3a;
+  }
+  header img {
+    height: 38px;
+    width: 320px;
   }
   
   nav {
@@ -71,13 +75,13 @@ header {
   nav ul a {
     margin: 0 10px;
     text-decoration: none;
-    color: #000000;
+    color: #ffffff;
     transition: color 0.3s ease;
   }
   
   nav ul a:hover {
-    color: #ffffff;
-    background-color: #ff6f00;
+    color: #f6b801;
+    background-color: #a20a3a;
   }
   
   
@@ -112,7 +116,7 @@ p {
 }
 .btn {
     display: inline-block;
-    background-color: #ff6f00;
+    background-color: #a20a3a;
     color: #ffffff;
     padding: 10px 20px;
     text-decoration: none;
@@ -122,7 +126,7 @@ p {
   }
   
   .btn:hover {
-    background-color: #ff6f00;
+    background-color: #a20a3a;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
   }
   
