rename folder according to convention

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 
 <head>
+    <link rel="icon"  type="image/png" href="%PUBLIC_URL%/src/frontend/img/favicon_pnb.png" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Disaster Recovery Drill | Your Website Name</title>
+    <title>PNB | Disaster Recovery Drill</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
