--- a/src/views/drdrill/src/index.css
+++ b/src/views/drdrill/src/index.css
@@ -52,6 +52,8 @@ body {
     align-items: flex-start;
     padding: 5p;
     background-color: #a20a3a;
+    width: 100vw; /* Set width to match the screen size */
+
   }
   
   .header img {
@@ -79,6 +81,8 @@ body {
   
   ul a:hover {
     color: #f6b801;
+    transform: scale(1.2);
+    transition: transform 0.3s ease;
     background-color: #a20a3a;
   }
   
@@ -121,6 +125,7 @@ p {
   .btn:hover {
     background-color: #a20a3a;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
+    color: #f6b801;
   }
   
   
@@ -136,22 +141,19 @@ p {
     text-align: center;
 }
 
-footer {
+.footer {
+    max-height: 120px; /* Set the desired height */
     background-color: #333333;
     color: #ffffff;
     text-align: center;
-    padding: 20px 0;
+    padding: 20p;
+    width: 100vw; /* Set width to match the screen size */
 }
 
-footer p {
+.footer p {
     font-size: 14px;
 }
 
-/* Logo styles */
-header img {
-    height: 50px;
-    width: 100px;
-}
 
 #contact {
     justify-content: center;
