--- a/src/views/drdrill/src/index.css
+++ b/src/views/drdrill/src/index.css
@@ -12,9 +12,22 @@ textarea,
 button {
     margin: 10px;
     padding: 0px;
-
     box-sizing: border-box;
     font-family: Arial, sans-serif;
+}
+
+.navbar {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    /* this will make the contents of navbar like logo, home, about and services display flex and make them in center of web page, but to make it at proper position we need to do the same thing in 
+    nav-list */
+    background-color: black;
+    position: sticky;
+    top: 0%;
+    z-index: 1;
 }
 
 body {
@@ -27,6 +40,26 @@ button {
     border: black;
     border-radius: 12px;
     border-color: #333333;
+}
+
+#about h2 {
+    font-size: 2rem;
+    font-weight: bolder;
+    font-style: normal;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: underline;
+}
+
+#hero h1 {
+    font-size: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: underline;
+}
+
+#services h2 {
+    font-size: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: underline;
 }
 
 /* Global styles */
@@ -52,43 +85,40 @@ body {
     align-items: flex-start;
     padding: 5p;
     background-color: #a20a3a;
-    width: 100vw; /* Set width to match the screen size */
+    width: 100vw;
+    /* Set width to match the screen size */
 
-  }
-  
-  .header img {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  height: 38px;
-  width: 240px;
-  }
-  
-  ul {
+}
+
+.header img {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    height: 38px;
+    width: 240px;
+}
+
+ul {
     display: flex;
     justify-content: center;
     align-items: flex-start;
     flex-wrap: wrap;
     margin-top: 10px;
-  }
-  
-  ul a {
+}
+
+ul a {
     margin: 0 10px;
     text-decoration: none;
     color: #ffffff;
     transition: color 0.3s ease;
-  }
-  
-  ul a:hover {
+}
+
+ul a:hover {
     color: #f6b801;
     transform: scale(1.2);
     transition: transform 0.3s ease;
     background-color: #a20a3a;
-  }
-  
-  
-  
-  
+}
 
 section {
     padding: 80px 0;
@@ -99,18 +129,23 @@ h1,
 h2,
 h3 {
     margin-bottom: 0px;
+    color: #a20a3a;
+    font-size: 1.5rem;
 }
+
+
 
 p {
     line-height: 1.5;
 }
 
-.Ccontainer{
+.Ccontainer {
     background-color: #333333;
     color: #ffffff;
     text-align: center;
     padding: 10px 0;
 }
+
 .btn {
     display: inline-block;
     background-color: #a20a3a;
@@ -120,16 +155,13 @@ p {
     border-radius: 4px;
     transition: background-color 0.3s ease;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
-  }
-  
-  .btn:hover {
+}
+
+.btn:hover {
     background-color: #a20a3a;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
     color: #f6b801;
-  }
-  
-  
-  
+}
 
 .services-grid {
     display: grid;
@@ -142,20 +174,22 @@ p {
 }
 
 .footer {
-    max-height: 120px; /* Set the desired height */
+    max-height: 120px;
+    /* Set the desired height */
     background-color: #333333;
     color: #ffffff;
     text-align: center;
     padding: 20p;
-    width: 100vw; /* Set width to match the screen size */
+    width: 100vw;
+    /* Set width to match the screen size */
 }
 
 .footer p {
-    font-size: 14px;
+    font-size: 15px;
 }
 
-
-#contact {
+#contact h2 {
+    text-decoration: underline;
     justify-content: center;
     text-align: center;
     padding: 50px 7%;
